# py-simple-beep

./: LICENSE  README.md  pyproject.toml
simple_beep/: __init__.py  __main__.py  audio.py  cli.py
