[project]
name = "simple-beep"
version = "0.2.0"
description = "Beep(1) compatible multi-wave audio output"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Unlicensed" }
dependencies = []

[project.optional-dependencies]
simpleaudio = [
    "simpleaudio-patched>=1.0.5",
]

[project.scripts]
beep = "simple_beep.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
